2004-04-19  Matti Aarnio  <mea@zmailer.org>

	* smtpserver/contentpolicy.c, smtpserver/smtpserver.c,
	  smtpserver/smtpserver.h, smtpserver/subdaemon-ctf.c:
	    Cleaning the new contentfilter interface, dead
	    code, etc.

	* transports/smtp/smtp.c:
	    Slight change in outbound EZMLM mode MAIL FROM
	    addresses; added spoolid on the generated "local-part".

	* man/scheduler.8.in, man/smtpserver.8.in:
	    Document editing; Z-REPORT ACL explanation,
	    although not result explanation...
	    Smtpserver's document updates.

	* smtpserver/contentpolicy.c, smtpserver/policytest.h,
	  smtpsever/smtpserver.h, smtpserver/subdaemon-ctf.c:
	    Rearranged things so that content-policy happens
	    under the centralized management daemon of its own.
	    Presently only one ContentFilter instance can be
	    running there, which might be a wee bit too little..

	* smtpserver/subdaemon-trk.c:
	    Report tracking slot allocation age in addition to
	    the total number of MAILs ("RATE"s) queried at it.
	    (If the tracking never yields all slots zero, then
	    the entry may get rather old, and the MAILs count
	    very high...)

	* smtpserver/smtpserver.c:
	    Renamed "IDENT" to "Z-IDENT", and "DEBUG" to "Z-DEBUG".

	* smtpserver/smtpserver.c:
	    Code rearrange; K&R doesn't like some C99 things..

	* smtpserver/subdaemon-trk.c:
	    Unused variables, and occasional lack of init..

2004-04-16  Matti Aarnio  <mea@zmailer.org>

	* include/shmmib.h, smtpserver/smtpreport.c, smtpserver/smtpserver.h,
	  smtpserver/policytest.h, smtpserver/policytest.c,
	  smtpserver/Makefile.in, smtpserver/subdaemon-trk.c:
	    Created  "Z-REPORT <user> <password> IP 1.2.3.4" command
	    into SMTP responder that will query the internal rate-tracker
	    server for more details about rating counters.
	    (Won't say a thing about _limits_ at all!)
	    Can use  scheduler.auth   file for user+password+ACLs,
	    no need to have separate file..
